# osqur

./: LICENSE  README.md  pyproject.toml
notebooks/: 0_quick_start.ipynb
