[tool.poetry]
name = "osqur"
version = "0.1.0"
description = "Quantitative UX Research in Python"
authors = ["Mason Sun <masonzsun@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
notebook = "^7.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
